--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div id="contacts" class="tab-content">
       <h2>Kontak Kami </h2>
-      <p>Mau Tanya-tanya? Cus, DM! atau cek Instagram kita di <a href="https://instagram.com/vindes.merch" target="_blank">@grilli.merch</a>! Follow juga ya! </p>
+      <p>Mau Tanya-tanya? Cus, DM! atau cek Instagram kita di <a href="https://instagram.com/grilli.merch" target="_blank">@grilli.merch</a>! Follow juga ya! </p>
     </div>
   </div>
 
